package com.example;

public abstract class Executable implements Runnable
{   
    public abstract void run();
    public abstract String getDescription();
}
